syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

// GenesisState defines the pki module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
}
